flang/test/semantics/resolve01.f90
integer :: x
!ERROR: 'x' already has a type declared
real :: x
end
